frontend/src/components/About/About.css
.team-list-wrapper{
    background-color:#333;
    width: 100%;
}
.title{
    padding-top:15px;
    margin-left: 5px;
    font-family: "Inter", serif;
    font-weight:bold;
}

.team-list-container{
    font-family: "Inter", serif;
    bottom: 0;
    background-color: black;
    width: 100%;
}

.team-list{
    display: flex;
    gap: 50px;
    padding-bottom: 16px;
    overflow-x: auto;
    width:100%;
}

.member{
    display: flex;
    align-items: center;
    min-width: 150px;
    text-align: center;
    gap:10px;
}

.member img{
    width: 100px;
    height: 100px;
    border-radius: 50%;
    object-fit: cover;
}

.member-info{
    display:flex;
    flex-direction: column;
}

.member-name{
    margin: 4px;
    font-size: 16px;
    color: white;
    font-weight: bold;
}

.member-role{
    margin: 0;
    font-size: 14px;
    color: gray;
}


.content-box{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #f5eab6;
    border-radius: 20px;
    padding: 20px; 
    width: 90%;
    margin: 20px auto;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
}

.blurb-title{
    font-size: 40px;
    font-family: "Inter", serif;
    font-weight:bold;
    color:white;
}

.paragraph{
    color:black;
    font-size: 24px;
}

.carousel {
    position: relative; 
    display: flex;
    flex-direction: column;
    align-items: left; 
    font-family: "JetBrains Mono", monospace;
    font-size: 1.5em;
    width: 600px;
    height: 600px;
    background-color: #333;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    color: black;
    border-radius: 30px;
  }
  
  .carousel-content {
    transition: opacity 0.5s ease-in-out;
  }
  
  .carousel-content p {
    font-size: 30px;
    color: white;
    line-height: 1.75;
  }
  .carousel-content ul {
    font-size: 30px;
    line-height: 1.75;
    color: white;
  }

  .image {
    position: relative; 
    font-family: "JetBrains Mono", monospace;
    width: 400px;
    height: 600px;
    background-color: #333;
    color: #a8a1a1;
    border-radius: 20px;
    object-fit: cover;
    overflow: hidden;
  }

  
  .navigation-console{
    align-self:flex-end;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .carousel-arrow {
    background: none;
    border: none;
    font-size: 24px;
    cursor: pointer;
    color:  black;
    transition: color 0.3s;
  }
  
  .carousel-arrow:hover {
    color: white;
  }
  
  .left {
    left: 10px;
  }
  
  .right {
    right: 10px;
  }
  
  .page-tracker {
    display: flex;
    justify-content: center;
  }
  
  .dot {
    width: 10px;
    height: 10px;
    margin: 0 5px;
    border-radius: 50%;
    background-color: #ddd;
    cursor: pointer;
    transition: background-color 0.3s;
  }
  
  .dot.active {
    background-color: black;
  }

  

